--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,3 +1,21 @@
 // Éditer les variables du thème pour configurer votre site web 
 // Variables disponibles : https://github.com/noesya/osuny-hugo-theme-AAA/blob/main/assets/sass/_theme/_configuration.sass
 // Documentation sur : https://developers.osuny.org/docs/theme/theme-aaa/
+
+// Fonts family
+$body-font-family: "Open Sans", "Times New Roman", "Times", serif
+$heading-font-family: "Poppins", "Helvetica", "Arial", sans-serif
+
+
+$header-color: white
+$header-background: transparent
+$header-border-bottom-width: 0
+$header-logo-height: 50px
+$header-sticky-invert-logo: true
+$hero-background-color: linear-gradient(45deg, #9897E3 0%, #b175be 100%)
+$hero-color: white
+$footer-color: white
+$footer-background-color: #2f1748
+
+$color-accent: #b175be
+$color-background-alt: #9897E3
