--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -1,1 +1,3 @@
 // @include font-face("Font name", font-file-in-fonts-without-extensions)
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600&family=Oswald:wght@400;500;600;700&family=Poppins:wght@300;400;500;700&family=Prata&display=swap')
