--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -6,8 +6,8 @@
 $body-font-family: "Open Sans", "Times New Roman", "Times", serif
 $heading-font-family: "Poppins", "Helvetica", "Arial", sans-serif
 
-
 $header-color: white
+$header-sticky-color: black
 $header-background: transparent
 $header-border-bottom-width: 0
 $header-logo-height: 50px
