--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,3 +1,6 @@
+$color-accent: #b175be
+$color-background-alt: #9897E3
+
 $heading-font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $body-font-family: $heading-font-family
 
@@ -10,8 +13,8 @@ $header-logo-height-desktop: 60px
 $header-sticky-invert-logo: true
 $hero-background-color: linear-gradient(45deg, #9897E3 0%, #b175be 100%)
 $hero-color: white
+$breadcrumb-color: $color-accent
+$breadcrumb-color-active: $color-accent
 $footer-color: white
 $footer-background-color: #2f1748
 
-$color-accent: #b175be
-$color-background-alt: #9897E3
